--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     <p class="mt-3 text-xl italic text-orange-500">Retire Instantly. Just Buy.</p>
     <p class="text-md italic text-orange-400 mt-1">“Buy Once ♦ Chill Forever”</p>
 
-    <a href="#" class="mt-6 inline-block px-6 py-3 bg-orange-500 hover:bg-orange-600 text-white text-lg rounded-full shadow transition duration-300 transform hover:scale-105">
+    <!-- CTA Button with Link -->
+    <a href="https://pump.fun/coin/5y2jrvQoEab8WgD258n4qFXUYU2jfbZHam2M549Vpump?include-nsfw=true" 
+       target="_blank" 
+       class="mt-6 inline-block px-6 py-3 bg-orange-500 hover:bg-orange-600 text-white text-lg rounded-full shadow transition duration-300 transform hover:scale-105">
       🏖️ Start Retiring
     </a>
   </div>
@@ -59,3 +62,4 @@
 
 </body>
 </html>
+
